force-app/main/default/objects/Account/fields/Apex_Trigger_Context_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Trigger_Context_Id__c</fullName>
    <description>This stores an identifier for a given trigger execution context. Note: if partial success operation resulted in a earlier run of the trigger being rolled back, and triggers being re-run on a subset of records, then this will be set to a different identifier.</description>
    <label>Apex Trigger Context Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>