force-app/main/default/objects/Account/fields/Apex_Trigger_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Apex_Trigger_Timestamp__c</fullName>
    <description>The &quot;before update&quot; trigger will set this to the current timestamp. Format: number of milliseconds since January 1, 1970, 00:00:00 GMT</description>
    <label>Apex Trigger Timestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>