force-app/main/default/objects/Account/fields/Fail_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Fail_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fail Validation Rule</label>
    <type>Checkbox</type>
</CustomField>