force-app/main/default/objects/Account/fields/Run_Workflow_Rule__c.field-meta.xml
<CustomField>
    <fullName>Run_Workflow_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Workflow Rule</label>
    <type>Checkbox</type>
</CustomField>